--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,13 +1,62 @@
 @charset "UTF-8";
 
 :root {
-    --cor01: #49a09d;
-    --cor02: #5f2c82;
+    --verde: #49a09d;
+    --roxo: #5f2c82;
 }
 
 * {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
 }
 
+body, html {
+    background-color: var(--roxo);
+    height: 100vh;
+    width: 100vw;
+    /*display: flex;
+    justify-content: center;
+    align-items: center;*/
+
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    
+}
+
+  
+#login {    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    background-color: white;
+    width: 250px;
+    height: 500px;    
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
+
+    transition: width .3s, height .3s;
+}
+    
+#imagem {
+    display: block;
+    background: var(--roxo) url(../imagens/building.jpeg) no-repeat;
+    background-position: right center;
+    background-size: cover;
+    height: 200px;
+    
+    
+}
+
+#formulario {
+    display: block;
+    padding: 10px;
+}
